--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity
             android:name="com.measurelet.MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +20,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.measurelet.LoginScreen_act" />
+        <activity
+            android:name="com.measurelet.LoginScreen_act"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
