--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name="com.measurelet.LoginScreen_act"
             android:screenOrientation="portrait" />
-        <activity android:name=".registrering_af_vaegt"></activity>
+        <activity android:name="com.measurelet.registrering_af_vaegt"></activity>
     </application>
 
 </manifest>
