--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.hjorth.measurelet">
 
     <application
+        android:name="com.measurelet.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,6 +24,7 @@
         <activity
             android:name="com.measurelet.LoginScreen_act"
             android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
