--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha07'
     implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha07'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
 apply plugin: 'com.google.gms.google-services'
