--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha07'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'com.robinhood.spark:spark:1.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
