--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.hjorth.measurelet"
-        minSdkVersion 26
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -51,5 +51,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.robinhood.spark:spark:1.2.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
