--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 
 android {
@@ -24,6 +34,7 @@ android {
 }
 repositories {
     maven { url 'https://jitpack.io' }
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
@@ -52,5 +63,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.robinhood.spark:spark:1.2.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 }
 apply plugin: 'com.google.gms.google-services'
